2007-11-12  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailPartViewers/UIxMailPartTextViewer.m ([NSString
	-stringByConvertingCRLNToHTML]): build the returned NSString
	without the ending \0.

2007-11-09  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailPartViewers/UIxMailPartICalViewer.m
	([UIxMailPartICalViewer -acceptLink])
	([UIxMailPartICalViewer -declineLink])
	([UIxMailPartICalViewer -tentativeLink]): removed useless methods.

	* UI/MailPartViewers/UIxMailPartICalAction.m ([UIxMailPartICalAction -addToCalendarAction])
	([UIxMailPartICalAction -deleteFromCalendarAction]): new stub
	methods.

	* SoObjects/Mailer/SOGoMailObject.m ([SOGoMailObject
	-lookupImap4BodyPartKey:]): make use of the new method below.

	* SoObjects/Mailer/SOGoMailBodyPart.m ([SOGoMailBodyPart
	+bodyPartClassForMimeType:mimeTypeinContext:_ctx]): new method
	that returns an appropriate Class depending on a given mime type.

	* UI/SOGoUI/UIxComponent.m ([UIxComponent -canCreateOrModify]):
	new boolean accessor that determines whether someone can create
	(i.e. modify a new entry) or modify an existing entry.

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject
	-lookupName:lookupNameinContext:localContextacquire:acquire]):
	overriden method to bind looked up keys to So methods but by
	avoiding a call to toOneRelationshipKeys. This will be the top
	method of the chain, meant to override SoObject's behaviour.

	* SoObjects/Contacts/SOGoContactLDAPFolder.m
	([SOGoContactLDAPFolder
	-lookupName:objectNameinContext:lookupContextacquire:acquire]):
	removed hack to prevent [super lookupName...] to read the entire
	LDAP directory when looking up a record.

2007-11-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoGCSFolder.m ([SOGoGCSFolder
	+folderWithSubscriptionReference:referenceinContainer:aContainer]):
	fixed a leak.

	* UI/MailPartViewers/UIxMailPartHTMLViewer.m
	([UIxMailPartHTMLViewer -_attachmentIds]): the reference was one